--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/ros3d/build/ros3d.js"></script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
