--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/ros3d/build/ros3d.js"></script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
